<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".fragments.ExpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">

<!--                <ImageView-->
<!--                    android:id="@+id/back_icon"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:background="@drawable/ripple"-->
<!--                    android:padding="5dp"-->
<!--                    android:src="@drawable/back" />-->

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/asap_bold"
                    android:padding="8dp"
                    android:text="@string/work_experience"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/language_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ripple"
                    android:padding="5dp"
                    android:src="@drawable/language_black"
                    android:layout_gravity="end"/>

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/coverIv"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/toolbar"
                android:background="@color/colorPrimaryDark"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/lione"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@drawable/my_profile"
                    app:civ_border_color="@android:color/black"
                    android:elevation="10dp"
                    app:civ_border_width="3dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/li2"
                android:layout_below="@+id/lione"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience1"
                    android:fontFamily="@font/asap_bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience2"
                    android:fontFamily="@font/asap_medium"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience3"
                    android:background="@drawable/background"
                    android:padding="8dp"
                    android:fontFamily="@font/asap_bold"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience4"
                    android:fontFamily="@font/asap"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/ripple_button1"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience5"
                    android:fontFamily="@font/asap"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/ripple_button1"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"/>


            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>


</ScrollView>