<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="20dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/lablee"
            android:id="@+id/lable"
            android:elevation="12dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_below="@+id/lable"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/my_profile"
            android:elevation="10dp"
            android:transitionName="imageTransition"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/asap_bold"
            android:gravity="center"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:transitionName="nameTransition" />

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/litwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lione"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/asap"
                    android:includeFontPadding="false"
                    android:padding="5dp"
                    android:text="@string/job_des"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/select_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp"
            android:elevation="8dp"
            android:background="@drawable/background"
            android:fontFamily="@font/asap_bold"
            android:onClick="showDialog"
            android:text="@string/select_language"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_one"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/asap_bold"
            android:onClick="showDashboard"
            android:text="Skip"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>